# ezinject

./: .cirrus.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Makefile  README.md  appveyor.yml  arch_ops.h  arm.cmake  build.sh  config.h  config.h.in  crt.c  dlfcn_compat.h  elfparse.c  elfparse.h  ezinject.c  ezinject.h  ezinject_android.c  ezinject_arch.h  ezinject_common.h  ezinject_compat.c  ezinject_compat.h  ezinject_freebsd.c  ezinject_injcode.c  ezinject_injcode.h  ezinject_injcode_common.c  ezinject_injcode_darwin.c  ezinject_injcode_glibc.c  ezinject_injcode_posix.c  ezinject_injcode_posix.h  ezinject_injcode_posix_common.c  ezinject_injcode_uclibc.c  ezinject_injcode_util.c  ezinject_injcode_windows.c  (+25 more)
.ci/linux/: Dockerfile
.ci/linux_arm64/: Dockerfile
.ci/windows/: Dockerfile
arch/: ezinject_aarch64.h  ezinject_amd64.h  ezinject_arm.h  ezinject_darwin_amd64.h  ezinject_freebsd_amd64.h  ezinject_freebsd_i386.h  ezinject_hppa.h  ezinject_i386.h  ezinject_mips.h  ezinject_ppc32.h  ezinject_ppc64.h  ezinject_riscv.h  ezinject_windows_amd64.h  ezinject_windows_i386.h
cmake/: common.cmake  config.cmake.in  ezinject.cmake
cmake-modules/: FindPHP.cmake
crt/: CMakeLists.txt  crt.c  crt.h  crt_injcode.c  crt_injcode.h  crt_posix.c  crt_uclibc.c  crt_user.c  crt_windows.c
crt/lh/: CMakeLists.txt
crt/lh/interface/: CMakeLists.txt  if_cpu.h  if_hook.h
crt/lh/interface/cpu/: CMakeLists.txt  cpu_common.c  cpu_common.h  if_sljit.h
crt/lh/interface/cpu/arm/: CMakeLists.txt  cpu_arm.c
crt/lh/interface/cpu/arm64/: CMakeLists.txt  cpu_arm64.c
crt/lh/interface/cpu/intel/: CMakeLists.txt  common_intel.c  cpu_i386.c  cpu_intel.h  cpu_x86_64.c
crt/lh/interface/cpu/mips/: CMakeLists.txt  cpu_mips.c
crt/lh/interface/cpu/sljit/: CMakeLists.txt
crt/lh/interface/exe/: CMakeLists.txt
crt/lh/interface/exe/elf/: CMakeLists.txt  elf_types.h  exedetails.c  linux_elf.h  loader.c
crt/lh/interface/hook/: CMakeLists.txt  lh_hook.c
crt/lh/interface/hook/linux/: CMakeLists.txt  lh_hook.c  lh_hook.h
freebsd/: remote.c  util.c
linux/: remote.c  util.c
os/: CMakeLists.txt
os/android/: CMakeLists.txt  inject.c  libc_bionic.c
os/darwin/: CMakeLists.txt  inject.c  libc_darwin.c  remote.c  util.c
os/freebsd/: CMakeLists.txt  inject.c  libc_freebsd.c  remote.c  util.c
os/linux/: CMakeLists.txt  common.c  common.h  inject.c  libc_generic.c  libc_glibc.c  libc_uclibc.c  remote.c  util.c
os/posix/: CMakeLists.txt  inject.c  remote.c  util.c
os/windows/: CMakeLists.txt  inject.c  libc_windows.c  remote.c  util.c  util.h
os/windows/InjLib/: CMakeLists.txt  GetProcAddress.c  GetProcAddress.h  Inject.c  Inject.h  LenDis.c  Lendis.h  Remote.c  Remote.h  Struct.h
patches/: thumb_mov_r0_1_bx_lr
posix/: remote.c
samples/: CMakeLists.txt
samples/cpp/: CMakeLists.txt  libdummy.cpp  target.cpp
samples/dotnetcore/: CMakeLists.txt  coreclr_delegates.h  dotnetcore.c  hostfxr.h  util.c  util.h
samples/dummy/: CMakeLists.txt  libdummy.c  target.c  target_dl.c
samples/memloader/: CMakeLists.txt  memloader.c  memloader_blob.S  module.c
samples/mono/: CMakeLists.txt  monohost.c  util.c  util.h
samples/netapi/: CMakeLists.txt  callgen.php  calls.c  netapi.c
samples/php/: CMakeLists.txt  hookfactory.php  php_embed.c  php_embed.version
samples/pyloader/: CMakeLists.txt  pyloader.c
samples/webapi/: CMakeLists.txt  callgen.php  webapi.c
targets/: android.sh  android64.sh  android_build_capstone.sh  arm-android.cmake  arm-buildroot-bcm-uclibc.cmake  arm64-android.cmake  build_php_x64.sh  freebsd-gcc.cmake  freebsd-gcc32.cmake  hppa.cmake  i686.cmake  mingw32.cmake  mingw64.cmake  ppc64le.cmake  riscv64.cmake  trendchip.cmake  trendchip.expect  trendchip.sh  ttgo-arm-linux.cmake  uclibc.expect  uclibc.sh
test/: CMakeLists.txt  basic_injection.c  basic_injection.cpp
windows/: remote.c  util.c
